--- a/lectio/marcos/index.html
+++ b/lectio/marcos/index.html
@@ -29,23 +29,23 @@
   <h2 class="subtitulo"> Referencia de la Biblia de Jerusalén</h2>
   <div>
     <ol>
-      <li class="li"><a href="./marcos1.html">Capítulo con 10 perícopas  </a></li>
-      <li class="li"><a href="./marcos2.html">Capítulo con 5 perícopas  </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas  </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas </a></li>
-      <li class="li"><a href="">Capítulo con  perícopas </a></li>
-      <li class="li"><a href="#1">INTRODUCCIÓN </a></li>
+      <li class="li"><a href="./marcos1.html"> 10 perícopas  </a></li>
+      <li class="li"><a href="./marcos2.html"> 5 perícopas  </a></li>
+      <li class="li"><a href=""> 6 perícopas  </a></li>
+      <li class="li"><a href="">  perícopas  </a></li>
+      <li class="li"><a href="">  perícopas  </a></li>
+      <li class="li"><a href="">  perícopas  </a></li>
+      <li class="li"><a href="">  perícopas  </a></li>
+      <li class="li"><a href="">  perícopas  </a></li>
+      <li class="li"><a href="">  perícopas  </a></li>
+      <li class="li"><a href="">  perícopas </a></li>
+      <li class="li"><a href="">  perícopas </a></li>
+      <li class="li"><a href="">  perícopas </a></li>
+      <li class="li"><a href="">  perícopas </a></li>
+      <li class="li"><a href="">  perícopas </a></li>
+      <li class="li"><a href="">  perícopas </a></li>
+      <li class="li"><a href="">  perícopas </a></li>
+      <li class="li"><a href="#1">NOTAS </a></li>
   
     </ol>
 
