--- a/lectio/marcos/marcos3.html
+++ b/lectio/marcos/marcos3.html
@@ -29,7 +29,13 @@
   <h1> TEMAS</h1>
   <div>
     <ol>
-     li.li*7>a[href="#$"]
+     <li class="li"><a href="#1">Curación del hombre de la mano paralizada. 3,1-6</a></li>
+     <li class="li"><a href="#2">La muchedumbre sigue a Jesús. 3,7-12</a></li>
+     <li class="li"><a href="#3">Institución de los Doce.3,13-19</a></li>
+     <li class="li"><a href="#4">Sus parientes le buscan. 3,20-21</a></li>
+     <li class="li"><a href="#5"> La blasfemia contra el Espíritu Santo 3,22-30</a></li>
+     <li class="li"><a href="#6">  3,</a></li>
+     <li class="li"><a href="#7"> El verdadero parentesco de Jesús. 3,31-35</a></li>
 
     </ol>
 
