--- a/euangelium/biblia/SolaScriptura.html
+++ b/euangelium/biblia/SolaScriptura.html
@@ -81,6 +81,11 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
+      <summary>Qué entienden por Sola Escritura?</summary>
+      <p>Cada denominación tiene su versión. Para algunos es, que la Palabra de Dios es solo lo escrito en la Biblia, para otros se extiende la Palabra a la inspiración a las personas en los mensajes pastorales, escritos de los primeros Padres e inclusive para algunos incluye a los primeros concilios, en esto, para algunos 5, para otros 7; en fin, no hay uniformidad.<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
       <summary></summary>
       <p><br><br></p>
     </details></li>
