--- a/euangelium/imagenes.html
+++ b/euangelium/imagenes.html
@@ -108,7 +108,8 @@
           Prender velas, besar?? Entonces si no se hace no estamos adorando!!! <br>
           Postrarse, si es así acaso el que no se postra no adora. De pie cantando, orando sentado,
           Reverencia, el respeto no puede ser adoración porque en Mateo 5,10 dice que solo a Dios se adora, es decir es algo que solo se le dedica al Dios y a nadie más.<br><br>
-          TOCAR, PRENDER VELAS BESAR. Si esto es adorar el que no lo hace no estaría adorando, lo cual es absurdo. Y además es algo que solo se hace para Dios y no es el caso<br>
+          TOCAR, PRENDER VELAS BESAR. Si esto es adorar el que no lo hace no estaría adorando, lo cual es absurdo. Y además es algo que solo se hace para Dios y no es el caso<br><br>
+          Los protestantes no adoran a Dios lo veneran, La adoracion implica sacrificio Lev 5,5-6
         </p>
       </details></li>
       <!-- ****************************** -->
