--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -34,13 +34,10 @@
     </i></b></p>
     <div class="norma">
       <ol>
-        <li>El objetivo es unirnos más al Señor</li>
-        <li>Es un encuentro público</li>
-        <li>Tema por tema</li>
-        <li>Punto por punto</li>
-        <li>Una sola persona por cada posición</l>
-        <li>tiempos iguales, 5-10 minutos</li>
-        <li>Primero con la Biblia</li>
+        <li class="li">El objetivo es: </li>
+        <li class="li">Tema por tema y Punto por punto</li>
+        <li class="li">Una sola persona y tiempos iguales, 2-5 minutos</l>
+        <li class="li">Primero con la Biblia</li>
 
       </ol>
     </div>
@@ -53,6 +50,7 @@
           <li class="li"><a href="../euangelium/bautismo.html">BAUTISMO</a></li>
           <li class="li"><a href="../euangelium/biblia/biblia.html">BIBLIA</a></li>
           <H2 class="cita">C</H2>
+          <li class="li"><a href="./confesion.html">CONFESIÓN</a></li>
           <li class="li"><a href="../euangelium/hijo.html">CRISTO</a></li>
           <H2 class="cita">D</H2>
           <li class="li"><a href="../euangelium/diezmo.html">DIEZMO</a></li>
