--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -41,11 +41,16 @@
      <section id="1">
       <h2 class="subtitulo">  QUE ES LA IGLESIA</h2>
       <ol>
-        <li>Los no católicos aseguran que la iglesia, es invisible.</li>
-        <li>Ni que la constituyen solo los que guardan la doctrina verdadera.</li>
-      </ol>
+        <li><details class="select">
+          <summary>Su definición</summary>
+          <ol> <li>Los no católicos aseguran que la iglesia, es invisible.</li>
+            <li>Que la constituyen solo los que guardan la doctrina verdadera.</li><br><br></ol>
+        </details></li>
+        <!-- ****************************** -->
+       
+    
        <!-- /////////////////////////////////////// -->
-  <ol>
+ 
     <li><details class="select">
       <summary>Mat 16,13-19</summary>
       <p>Mat 16:13  Viniendo Jesús a la región de Cesarea de Filipo, preguntó a sus discípulos, diciendo: ¿Quién dicen los hombres que es el Hijo del Hombre? <br>
