--- a/lectio/TextosMemo.html
+++ b/lectio/TextosMemo.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>APOLOGETICA</title>
+  <title>APOLOGÉTICA</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
-    <header>
-      <div class="container">
-        <p class="logo"> CRISTO SALVADOR</p>
-        <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
-      </div>
-    </header> <br><br>
+  <header>
+    <div class="container">
+      <p class="logo"> CRISTO SALVADOR</p>
+      <!-- ****************************************************** -->
+      <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+      <a href="../index.html" class="nombre">INICIO </a>
+    </div>
+  </header> <br><br>
+  <div class="contenedor">
     <!-- ****************************************************************** -->
 <h1 class="init">TEXTOS MEMO</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
@@ -687,6 +688,6 @@
 
 
 
-
+</div>
 </body>
 </html>
