--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>TEMAS </title>
- 
+    <style>
+      .gkc{
+        font-size: 0.5em;
+      }
+    </style>
   </head>
 
   <body>
@@ -47,35 +51,35 @@
       <div>
         <ol>
           <H2 class="cita">B</H2>
-          <li class="li"><a href="../euangelium/bautismo.html">BAUTISMO</a></li>
-          <li class="li"><a href="../euangelium/biblia/biblia.html">BIBLIA</a></li>
+          <li class="li"><a href="../euangelium/bautismo.html"  class="" >BAUTISMO</a></li>
+          <li class="li"><a href="../euangelium/biblia/biblia.html"  class="">BIBLIA</a></li>
           <H2 class="cita">C</H2>
-          <li class="li"><a href="./confesion.html">CONFESIÓN</a></li>
-          <li class="li"><a href="../euangelium/hijo.html">CRISTO</a></li>
+          <li class="li"><a href="./confesion.html"  class="">CONFESIÓN</a></li>
+          <li class="li"><a href="../euangelium/hijo.html"  class="">CRISTO</a></li>
           <H2 class="cita">D</H2>
-          <li class="li"><a href="../euangelium/diezmo.html">DIEZMO</a></li>
+          <li class="li"><a href="../euangelium/diezmo.html"  class="">DIEZMO</a></li>
           <H2 class="cita">E</H2>
-          <li class="li"><a href="../euangelium/eucaristia.html">EUCARISTIA</a></li>
+          <li class="li"><a href="../euangelium/eucaristia.html"  class="">EUCARISTÍA</a></li>
           <H2 class="cita">I</H2>
-          <li class="li"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
-          <li class="li"><a href="../euangelium/imagenes.html">IMÁGENES</a></li>
+          <li class="li"><a href="../euangelium/iglesia.html"  class="" >IGLESIA</a></li>
+          <li class="li"><a href="../euangelium/imagenes.html"  class="gkc">IMÁGENES</a></li>
           <h2 class="cita">L</h2>
-          <li class="li"><a href="../euangelium/laLey.html">LA LEY</a></li>
+          <li class="li"><a href="../euangelium/laLey.html"  class="">LA LEY</a></li>
           <h2 class="cita">M</h2>
-          <li class="li"><a href="../euangelium/Mision.html">MISIÓN</a></li>
+          <li class="li"><a href="../euangelium/Mision.html"  class="">MISIÓN</a></li>
           <H2 class="cita">O</H2>
-          <li class="li"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
+          <li class="li"><a href="../euangelium/oracion.html"  class="">ORACIÓN</a></li>
           <H2 class="cita">P</H2>
-          <li class="li"><a href="../euangelium/perdónPecados.html">PERDÓN DE PECADOS</a></li>
-          <li class="li"><a href="../euangelium/procesiones.html">PROCESIONES</a></li>
-          <li class="li"><a href="../euangelium/purgatorio.html">PURGATORIO</a></li>
+          <li class="li"><a href="../euangelium/perdónPecados.html"  class="">PERDÓN DE PECADOS</a></li>
+          <li class="li"><a href="../euangelium/procesiones.html"  class="gkc">PROCESIONES</a></li>
+          <li class="li"><a href="../euangelium/purgatorio.html"  class="">PURGATORIO</a></li>
           <H2 class="cita">S</H2>
-          <li class="li"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
-          <li class="li"><a href="./sabat.html">SABAT</a></li>
+          <li class="li"><a href="../euangelium/salvacion.html"  class="">SALVACIÓN</a></li>
+          <li class="li"><a href="./sabat.html"  class="">SABAT</a></li>
           <H2 class="cita">T</H2>
-          <li class="li"><a href="../euangelium/trinidad.html">TRINIDAD</a></li>
+          <li class="li"><a href="../euangelium/trinidad.html"  class="">TRINIDAD</a></li>
           <H2 class="cita">V</H2>
-          <li class="li"><a href="../euangelium/maria.html">VIRGEN MARÍA</a></li>
+          <li class="li"><a href="../euangelium/maria.html"  class="">VIRGEN MARÍA</a></li>
 
 
         </ol>
