--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>FORMACIÓN</title>
 </head>
 <body>
@@ -18,11 +18,6 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-
-        
-      </div>
-    </header>
-<!-- ************************************************************** -->
     <section id="hero1">
       <img src="media/PORTADA2023.jpeg" alt="">
     </section>
