--- a/index.html
+++ b/index.html
@@ -17,24 +17,10 @@
         <a href="noviciado/01formacion.html" class="nombre">FORMACIÓN </a>
       </div>
     </header> <br><br>
-    <!-- *************************************************************************** -->
-    <section id="hero1">
+    <!-- ******************************************************** -->
+    <section id="hero">
       <img src="media/PORTADA2023.jpeg" alt="">
     </section>
-<!--**************************************************************  -->
-    <section id="">
-      <div class="container">
-        <div class="texto">
-          <h2>Somos <br> <span class="color-acento">LA ORDEN SEGLAR CARMELITA</span></h2>
-          <p>Quiénes pertenecen a la Orden Seglar de los Carmelitas? <br> Aquellos miembros del pueblo de Dios, que llamados por el Señor Jesús,
-            y libres de impedimentos, acogen conscientemente su vocación aceptando el programa de Formación y de vida
-            que ofrece la Orden Carmelita Seglar.</p>
-          <div class="img-container">
-            <img src="media/JUNTOS.jpg" alt="juntos">
-          </div>
-        </div>
-      </div>
-    </section> <br></br>
     <!-- ******************************************************** -->
     <section>
       <footer class="footer">
@@ -47,7 +33,6 @@
     
   </footer>
 </section>
-
 <!-- ///////////////////////////////////////////////////////// -->
   </body>
 
