--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
-  <title>FORMACIÓN</title>
+  <title>GKC-CARMELITAS</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -12,20 +12,20 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="#alInicio"><img src="./media/ESCUDOCARM.png" alt="" class="logoC"></a>
         <a href="euangelium/01formacion.html" class="nombre">APOLOGÍA </a>
         <a href="noviciado/01formacion.html" class="nombre">FORMACIÓN </a>
       </div>
     </header> <br><br>
     <!-- ******************************************************** -->
-    <section id="hero">
-      <img src="media/PORTADA2023.jpeg" alt="">
+    <section id="">
+      <img src="./media/PORTADA2023.jpeg" alt="">
     </section>
     <!-- ******************************************************** -->
     <section>
       <footer class="footer">
         <footer>
-          <h3>&copy;  ORDEN CARMELITA SEGLAR-PUCUSANA <span id="year"></span></h3>
+          <h3>&copy;  ORDEN CARMELITA SEGLAR-PUCUSANA 2016-<span id="year"></span></h3>
         </footer>
         <script>
         document.getElementById("year").textContent = new Date().getFullYear();
