--- a/latin/saludos.html
+++ b/latin/saludos.html
@@ -50,8 +50,8 @@
         <thead>
             <tr>
                 <th>#</th>
-                <th>Saludar</th>
-                <th>Persona</th>
+                <th>SALUDAR</th>
+                <th>PERSONA</th>
                 <th>SALUTANT</th>
                 <th>PERSONA</th>
             </tr>
