--- a/liturgia/liturgia.html
+++ b/liturgia/liturgia.html
@@ -28,7 +28,7 @@
     <div>
       <ol>
         <li class="li"><a href="../liturgia/misa.html">MISA- MISAL ROMANO</a></li>
-        <li class="li"><a href="../latin/Latin.html">LATIN</a></li>
+        <li class="li"><a href="../latin/index.html">LATIN</a></li>
         <li class="li"><a href=" "></a></li>
     
       
