--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -28,7 +28,7 @@
   <div>
     <H2 class="cita">ENLACES EXTERNOS</H2>
     <ol>
-      <li class="li"><a href="./InterpretacionBasica.html">LA INTERPRETACIÓN BIBLICA</a></li>
+      <li class="li"><a href="./InterpretacionBasica.html">LA INTERPRETACIÓN BÍBLICA</a></li>
       <li class="li"><a href="./TextosMemo.html">TEXTOS MEMO</a></li>
       <li class="li"><a href="../lectio/mateo.html">MATEO</a></li>
       <li class="li"><a href="../lectio/marcos/index.html">MARCOS</a></li>
@@ -42,11 +42,12 @@
         <li class="li"><a href="#libros">ENLACE A LIBROS</a></li>
         <li class="li"><a href="#intro">INTRODUCCIÓN</a></li>
         <li class="li"><a href="#LECTIO">INTRODUCCIÓN A LA LECTIO</a></li>
-        <li class="li"><a href="#01">PROCESO LECTIO</a></li>
-        <li class="li"><a href="#02">PROCESO MEDITATIO</a></li>
-        <li class="li"><a href="#03">PROCESO ORATIO</a></li>
-        <li class="li"><a href="#04">PROCESO CONTEMPLATIO</a></li>
-        <li class="li"><a href="#05"> </a></li>
+        <li class="li"><a href="#1">PROCESO LECTIO</a></li>
+        <li class="li"><a href="#2">PROCESO MEDITATIO</a></li>
+        <li class="li"><a href="#3">PROCESO ORATIO</a></li>
+        <li class="li"><a href="#4">PROCESO CONTEMPLATIO</a></li>
+        <li class="li"><a href="#5">METANOIA </a></li>
+        <li class="li"><a href="#6"> </a></li>
       </ol>
       </div>
       </section>
@@ -670,7 +671,7 @@
     PERSEVERANCIA, RECTA INTENCIÓN, HUMILDAD Y AMOR. <br>
   </section>
   <!-- ********************************************************** -->
-<section id="01">
+<section id="1">
   <h2 class="titulo">LECTIO ¿Qué dijo el Señor?</h2>
   <ol> 
     <h2 class="subtitulo">ELEGIR EL TEXTO</h2>
@@ -718,7 +719,7 @@
   </ol>
 </section>
 <!-- ****************************************************************** -->
-<section id="02">
+<section id="2">
   <h2 class="subtitulo">MEDITATIO ¿Qué me dice el Señor?</h2>
   <ol>
     <li class="cita">RELACIÓN MENSAJE-CRISTIFICACIÓN</li>
@@ -728,7 +729,7 @@
   </ol>
 </section>
 <!-- ****************************************************************** -->
-<section id="03">
+<section id="3">
   <h2 class="subtitulo">ORATIO ¿Qué respondo al Señor?</h2>
   <ol> 
     <li class="cita">COMO SE RESPONDE HOY, CON FE O SIN ELLA</li>
@@ -739,7 +740,7 @@
   </ol>
 </section>
 <!-- ****************************************************************** -->
-<section id="04">
+<section id="4">
   <h2 class="subtitulo">CONTEMPLATIO ¿Qué me muestra el Señor?</h2>
   <ol>
     <li class="cita">COMO ACTUA EL SEÑOR EN CADA CIRCUNSTANCIA</li>
@@ -751,6 +752,108 @@
     <li class="cita">CONDENSARLO EN UNA ORACIÓN: GRACIAS, PETICIÓN Y CONVERSIÓN</li>
     <li class="cita">HACER UN GRAN MOMENTO DE SILENCIO, PAZ Y DISPONIBILIDAD</li>
   </ol>
+</section>
+<!-- ****************************************************************** -->
+<section id="5">
+  <h2 class="cita">METANOIA</h2>
+  <ol>
+    <li><details class="select">
+      <summary>La oración</summary>
+      <p>La oración es un proceso de encuentro. <br>
+        primero será quizás al iniciar y terminar el día, luego en el inicio de cada acción relevante y poco a poco será una oración continua es decir un permanente caminar con el Señor<br><br>
+      <ol>
+        <li>Por eso es necesario fijar una determinada hora o momento</li>
+        <li>Al iniciar y terminar el día, y a la hora de comer </li>
+        <li>Y al iniciar cada acción importante</li>
+        <li>Sin oración es imposible cualquier bien, el bien nace con la oración</li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Lectura de la Palabra</summary>
+      <p>El encuentro con el Señor tiene una finalidad central que en mi caso es mi conversión<br><br>
+      <b><ol>
+        <li>Lectura de lunes a viernes</li>
+        <li>Meditación durante el día, en todo momento posible </li>
+        <li>Y durante la noche en mi rosario</li>
+        <li>Jesús mensaje y mensajero de todo y en todo</li>
+        <li>La Biblia leída en clave de amor </li>
+      </ol></b>
+      </p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Examen de Conciencia</summary>
+      <p>El objetivo es ser consciente de todo aquello que debo mejorar<br><br>
+      <b><ol>
+        <li>Cada vez que haga algo y me de cuenta anotar y enmendar</li>
+        <li>Reflexionar antes del rosario, cual es su causa en mi y como me invita a una transformación</li>
+        <li>Vivir de tal manera que se elimine, quizás poco a poco, de mi vida el mal</li>
+        <li>Arrepentimiento, confesión, perdón de pecados y propósito de enmienda</li>
+        <li>La conversión implica la fe, esperanza y amor</li>
+        <li></li>
+        <li></li>
+      </ol></b>
+      </p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Apertura a la Novedad</summary>
+      <p>Dios nos invita a ser nuevos, por un camino que solo el sabe, por eso aceptar el pan nuestro y la novedad nuestra de cada día<br><br>
+      <b>
+        <ol>
+          <li>En la oración entregar el día al Señor</li>
+          <li>Aceptar toda realidad como primer paso para ser mejor y mejorar la realidad</li>
+          <li>Dios se hace presente en la novedad</li>
+          <li>Examinar como reacciono a la novedad, la agradable y la otra</li>
+        </ol>
+      </b></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>El Llamado</summary>
+      <p>Es universal, todos estamos llamados a ser uno con Cristo<br><br>
+      <b><ol>
+        <li>Exige una respuesta radical</li>
+        <li>Una vida de permanente conversión (Fe, Esperanza y Amor) </li>
+        <li>Implica una renuncia a todo lo que nos aleja del Señor</li>
+        <li>El objetivo es Jn 17,21</li>
+        <li></li>
+     
+      </ol></b>
+      </p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>El Reino: El Bien</summary>
+      <p>La construcción del reino es una acción del Espíritu Santo, que se manifiesta en la oración y la obediencia a su iglesia<br><br>
+      <b>
+        <ol>
+          <li>La misión comienza con una comunidad de discípulos.</li>
+          <li>Jesús es quien nos conduce al Reino </li>
+          <li>Se construye con el Bien, en todo y cada cosa. Venciendo al mal donde quiera se instale</li>
+          <li> La autoridad divina de Jesús, su poder sobre el mal</li>
+          <li>El servicio es el bien que hacemos, en nombre de Dios a nuestros semejantes</li>
+          <li>ESte servicio debe ser integral, físico, social, y principalmente espiritual </li>
+          <li></li>
+        </ol>
+      </b></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+  </ol>
+</section>
+<!-- ****************************************************************** -->
+<section id="6">
+  
+  
 </section>
 <!-- ****************************************************************** -->
   </body>
