--- a/lectio/marcos/index.html
+++ b/lectio/marcos/index.html
@@ -31,20 +31,20 @@
     <ol>
       <li class="li"><a href="./marcos1.html"> 10 perícopas  </a></li>
       <li class="li"><a href="./marcos2.html"> 5 perícopas  </a></li>
-      <li class="li"><a href=""> 6 perícopas  </a></li>
-      <li class="li"><a href="">  perícopas  </a></li>
-      <li class="li"><a href="">  perícopas  </a></li>
-      <li class="li"><a href="">  perícopas  </a></li>
-      <li class="li"><a href="">  perícopas  </a></li>
-      <li class="li"><a href="">  perícopas  </a></li>
-      <li class="li"><a href="">  perícopas  </a></li>
-      <li class="li"><a href="">  perícopas </a></li>
-      <li class="li"><a href="">  perícopas </a></li>
-      <li class="li"><a href="">  perícopas </a></li>
-      <li class="li"><a href="">  perícopas </a></li>
-      <li class="li"><a href="">  perícopas </a></li>
-      <li class="li"><a href="">  perícopas </a></li>
-      <li class="li"><a href="">  perícopas </a></li>
+      <li class="li"><a href="./marcos3.html"> 6 perícopas  </a></li>
+      <li class="li"><a href="./marcos4.html">  perícopas  </a></li>
+      <li class="li"><a href="./marcos5.html">  perícopas  </a></li>
+      <li class="li"><a href="./marcos6.html">  perícopas  </a></li>
+      <li class="li"><a href="./marcos7.html">  perícopas  </a></li>
+      <li class="li"><a href="./marcos8.html">  perícopas  </a></li>
+      <li class="li"><a href="./marcos9.html">  perícopas  </a></li>
+      <li class="li"><a href="./marcos10.html">  perícopas </a></li>
+      <li class="li"><a href="./marcos11.html">  perícopas </a></li>
+      <li class="li"><a href="./marcos12.html">  perícopas </a></li>
+      <li class="li"><a href="./marcos13.html">  perícopas </a></li>
+      <li class="li"><a href="./marcos14.html">  perícopas </a></li>
+      <li class="li"><a href="./marcos15.html">  perícopas </a></li>
+      <li class="li"><a href="./marcos16.html">  perícopas </a></li>
       <li class="li"><a href="#1">NOTAS </a></li>
   
     </ol>
