--- a/lectio/marcos/marcos2.html
+++ b/lectio/marcos/marcos2.html
@@ -172,8 +172,11 @@
      <br><br></p>
     </details></li>
     <!-- ****************************** -->
- 
-    
+    <li><details class="select">
+      <summary>Metanoia</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
  
     <li><details class="select">
       <summary></summary>
@@ -330,6 +333,11 @@
        - Cambio de vida: La respuesta inmediata de Levi, dejando su trabajo para seguir a Jesús, refleja un cambio radical y la idea de nueva vida en Cristo.
        
        <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Metanoia</summary>
+      <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
@@ -512,6 +520,11 @@
           4. La Conversión y el Arrepentimiento :<br>Ven esta escena como un llamado a reconocer la propia necesidad de redención.  
           5. El Banquete como Símbolo del Reino de Dios :<br>La mesa compartida apunta al banquete celestial, donde los arrepentidos son bienvenidos.
           <br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
+        <summary>Metanoia</summary>
+        <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
@@ -962,7 +975,11 @@
         <br><br></p>
     </details></li>
     <!-- ****************************** -->
- 
+    <li><details class="select">
+      <summary>Metanoia</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
