--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -37,7 +37,7 @@
    </div>
     <!-- ENLACE internos **********************************************************-->
     <div class="enlace">
-      <H2 class="lema">ENLACES INTERNOS</H2>
+      <H2 class="cita">ENLACES INTERNOS</H2>
       <ol>
         <li class="li"><a href="#libros">ENLACE A LIBROS</a></li>
         <li class="li"><a href="#intro">INTRODUCCIÓN</a></li>
@@ -766,9 +766,9 @@
         <li>Al iniciar y terminar el día, y a la hora de comer </li>
         <li>Y al iniciar cada acción importante</li>
         <li>Sin oración es imposible cualquier bien, el bien nace con la oración</li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Apertura a la novedad de cada día, oración y discernimiento como docilidad al ES</li>
+        <li>Arrepentimiento, confesión, perdón de pecados y conversión; como camino del examen de conciencia</li>
+   
       </ol></p>
     </details></li>
     <!-- ****************************** -->
