--- a/lectio/marcos/index.html
+++ b/lectio/marcos/index.html
@@ -49,7 +49,7 @@
   
     </ol>
 
-  </div>
+  </div><br><br><hr><hr>
 </section>
 <!-- ****************************************************************** -->
 <section id="1">
