--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -37,5 +37,402 @@
         </ol>
       </div>
     </section>
-</body>
+    <!-- /////////////////////////////////////////////////////////////////////////////// -->
+   <section>
+    <h2 class="subtitulo">Lunes</h2>
+   <!-- /////////////////////////////////////// -->
+   <ol>
+    <li><details class="select">
+      <summary>06-07 Gratia et Propositum</summary>
+  <ol>
+        <li>Oratio </li>
+        <li>Lectio</li>
+        <li>Evangelium</li>
+        <li></li>
+      </ol>
+      <p>Agradecimiento y Proposito<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>07-08 Prandium</summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p>Desayuno<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>08-10 Disce</summary>
+  <ol>
+        <li>Programación</li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p>Aprender<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>10-11 Praeparatio</summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p>Preparación<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>11-12.30 Exercitia</summary>
+  <ol>
+        <li>Tai Chi</li>
+        <li>Brazos</li>
+        <li>Bach</li>
+        <li>Oculus</li>
+        <li></li>
+      </ol>
+      <p>Ejercicios<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>12.30-14 Coctione</summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p>Cocinando<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>14-16</summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>16-17 Parentes</summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p>Padres<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>17-20.30 Meditatio</summary>
+  <ol>
+        <li>¿Cómo elegir a Dios en cada situación? <br>
+          Vivir en presencia del Señor!!! <br>
+        ¿Método de discernimiento? 
+        </li><br>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p>Meditación<br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>20.30-21 </summary>
+  <ol>
+        <li>Ejercicios Noche</li>
+        <li>Santoral</li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+    <li><details class="select">
+      <summary>21 Rosarium</summary>
+  <ol>
+        <li>Examen de Conciencia
+          <ol>
+            <li>Aquello que hice</li>
+            <li>Como mejorarlo</li>
+            <li>Señales para Convertirme</li>
+          </ol>
+        </li>
+        <li>Regla Carmelita</li>
+        <li>Santoral</li>
+        <li>Misterios</li>
+        <li>Cupio emendare</li>
+        <li></li>
+      </ol>
+      <p>Quiero mejorar <br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+  </ol>
+</section>
+<!-- ////////////////////////////////// -->
+   <section>
+    <h2 class="subtitulo">Martes</h2>
+   <!-- /////////////////////////////////////// -->
+   <ol>
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+  </ol>
+</section>
+<!-- ////////////////////////////////// -->
+   <section>
+    <h2 class="subtitulo">Miércoles</h2>
+   <!-- /////////////////////////////////////// -->
+   <ol>
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+  </ol>
+</section>
+<!-- ////////////////////////////////// -->
+<section id="5">
+  <h2 class="cita">METANOIA</h2>
+  <ol>
+    <li><details class="select">
+      <summary>La oración</summary>
+      <p>La oración es un proceso de encuentro. <br>
+        primero será quizás al iniciar y terminar el día, luego en el inicio de cada acción relevante y poco a poco será una oración continua es decir un permanente caminar con el Señor<br><br>
+      <ol>
+        <li>Por eso es necesario fijar una determinada hora o momento</li>
+        <li>Al iniciar y terminar el día, y a la hora de comer </li>
+        <li>Y al iniciar cada acción importante</li>
+        <li>Sin oración es imposible cualquier bien, el bien nace con la oración</li>
+        <li>Apertura a la novedad de cada día, oración y discernimiento como docilidad al ES</li>
+        <li>Arrepentimiento, confesión, perdón de pecados y conversión; como camino del examen de conciencia</li>
+   
+      </ol></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Lectura de la Palabra</summary>
+      <p>El encuentro con el Señor tiene una finalidad central que en mi caso es mi conversión<br><br>
+      <b><ol>
+        <li>Lectura de lunes a viernes</li>
+        <li>Meditación durante el día, en todo momento posible </li>
+        <li>Y durante la noche en mi rosario</li>
+        <li>Jesús mensaje y mensajero de todo y en todo</li>
+        <li>La Biblia leída en clave de amor </li>
+      </ol></b>
+      </p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Examen de Conciencia</summary>
+      <p>El objetivo es ser consciente de todo aquello que debo mejorar<br><br>
+      <b><ol>
+        <li>Cada vez que haga algo y me de cuenta anotar y enmendar</li>
+        <li>Reflexionar antes del rosario, cual es su causa en mi y como me invita a una transformación</li>
+        <li>Vivir de tal manera que se elimine, quizás poco a poco, de mi vida el mal</li>
+        <li>Arrepentimiento, confesión, perdón de pecados y propósito de enmienda</li>
+        <li>La conversión implica la fe, esperanza y amor</li>
+        <li></li>
+        <li></li>
+      </ol></b>
+      </p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Apertura a la Novedad</summary>
+      <p>Dios nos invita a ser nuevos, por un camino que solo el sabe, por eso aceptar el pan nuestro y la novedad nuestra de cada día<br><br>
+      <b>
+        <ol>
+          <li>En la oración entregar el día al Señor</li>
+          <li>Aceptar toda realidad como primer paso para ser mejor y mejorar la realidad</li>
+          <li>Dios se hace presente en la novedad</li>
+          <li>Examinar como reacciono a la novedad, la agradable y la otra</li>
+        </ol>
+      </b></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>El Llamado</summary>
+      <p>Es universal, todos estamos llamados a ser uno con Cristo<br><br>
+      <b><ol>
+        <li>Exige una respuesta radical</li>
+        <li>Una vida de permanente conversión (Fe, Esperanza y Amor) </li>
+        <li>Implica una renuncia a todo lo que nos aleja del Señor</li>
+        <li>El objetivo es Jn 17,21</li>
+        <li></li>
+     
+      </ol></b>
+      </p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>El Reino: El Bien</summary>
+      <p>La construcción del reino es una acción del Espíritu Santo, que se manifiesta en la oración y la obediencia a su iglesia<br><br>
+      <b>
+        <ol>
+          <li>La misión comienza con una comunidad de discípulos.</li>
+          <li>Jesús es quien nos conduce al Reino </li>
+          <li>Se construye con el Bien, en todo y cada cosa. Venciendo al mal donde quiera se instale</li>
+          <li> La autoridad divina de Jesús, su poder sobre el mal</li>
+          <li>El servicio es el bien que hacemos, en nombre de Dios a nuestros semejantes</li>
+          <li>ESte servicio debe ser integral, físico, social, y principalmente espiritual </li>
+          <li></li>
+        </ol>
+      </b></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+  </ol>
+</section>
+  </body>
 </html>
