--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -46,8 +46,15 @@
       <summary>06-07 Gratia et Propositum</summary>
   <ol>
         <li>Oratio </li>
-        <li>Lectio</li>
-        <li>Evangelium</li>
+        <li>Lectio
+          <ol>
+            <li>Objetivo es conocer al Señor</li>
+            <li>Solo se puede decidir desde la Verdad</li>
+            <li>Cristo nos enseña a ser hombres: La Conversión</li>
+            <li></li>
+          </ol>
+        </li>
+        <li>Evangelium</li> 
         <li></li>
       </ol>
       <p>Agradecimiento y Proposito<br><br></p>
