--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>FORMACION</title>
+  <title>FORMACIÓN</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -34,6 +34,9 @@
           <li class="li"><a href="../historia/index.html">HISTORIA DE LA IGLESIA</a></li>
           <li class="li"><a href="../doctrinaSocial/index.html">DOCTRINA SOCIAL</a></li>
           <li class="li"><a href="../Magisterio/index.html">MAGISTERIO</a></li>
+          <h2 class="cita"></h2>
+          <li class="li"><a href="../Ajedrez/index.html">AJEDREZ</a></li>
+          <li class="li"><a href="../musica/">MÚSICA</a></li>
         </ol>
       </div>
     </section>
