--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -5,7 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
   <title>FORMACIÓN</title>
+  <style>
+      
+   
+</style>
 </head>
+<script>  
+  function toggleComplete(item) {  
+      item.classList.toggle('completed');  
+  }  
+</script> 
 <body>
   <p id="alInicio" class="principio"></p>
     <header>
@@ -53,7 +62,12 @@
           <ol>
             <li>Objetivo es conocer al Señor</li>
             <li>Solo se puede decidir desde la Verdad</li>
+            <li>Dios es la verdad!!!!</li>
             <li>Cristo nos enseña a ser hombres: La Conversión</li>
+            <li>El Bien es la ruta de la conversión</li>
+            <li>Siempre en todo, cada vez mejor.</li>
+            <li>El conocimiento es la verdad acerca de las cosas</li>
+            <li>El método es siempre condicionado por el objetivo y las experiencias</li>
             <li></li>
           </ol>
         </li>
@@ -76,14 +90,90 @@
     <!-- ****************************** -->
     <li><details class="select">
       <summary>08-10 Disce</summary>
-  <ol>
-        <li>Programación</li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      <p>Aprender<br><br></p>
-    </details></li>
+      <ol id="taskList">
+        <li> <span class="hora" class="hora">Ajedrez</span>
+          <ul>
+            <li><input type="checkbox" data-id="ajedrez">
+              <span>video1 y Apertura Italiana</span>
+            </li>
+          </ul></li>
+           <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Apología</span>
+          <ul>
+            <li> <input type="checkbox" data-id="apologia">
+           <span>   La Eucaristía padre Toro </span>
+            </li>
+          </ul>
+          </li>
+           <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Canto</span>
+          <ul>
+            <li><input type="checkbox" data-id="canto">
+              <span>Tema 01</span>
+            </li>
+          </ul>
+           </li>
+            <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Cocina</span>
+          <ul>
+            <li><input type="checkbox" data-id="cocina">
+             <span> Aji de Gallina y videos USB</span>
+            </li>
+          </ul>
+           </li>
+            <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Corpus</span>
+          <ul>
+            <li><input type="checkbox" data-id="corpus">
+             <span> Actualizar video Super y diseño de Equipo de dominadas</span>
+            </li>
+          </ul>
+           </li>
+            <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Física</span>
+          <ul>
+            <li><input type="checkbox" data-id="fisica">
+              <span>Buscar tutorial</span>
+            </li>
+          </ul>
+           </li>
+            <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Idioma</span>
+          <ul>
+            <li><input type="checkbox" data-id="idioma">
+              <span>Construir primera tabla "Saludos" </span>
+            </li>
+          </ul>
+          </li>
+           <!-- ++++++++++++++++++++++++++++++++ -->
+           <li><span class="hora">Música</span>
+            <ul>
+              <li><input type="checkbox" data-id="musica">
+              <span>  Tutorial de Formación y Practica melodia 01</span>
+              </li>
+            </ul>
+             </li>
+             <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Películas</span>
+          <ul>
+            <li> <input type="checkbox" data-id="peliculas">
+            <span>  Brígida de Suecia y Poner numeración a Memo </span>
+            </li>
+          </ul>
+          </li>
+           <!-- ++++++++++++++++++++++++++++++++ -->
+        <li><span class="hora">Programación</span>
+          <ul>
+            <li> <input type="checkbox" data-id="programacion">
+            <span>Tema 07 Directivas personalizadas</span>
+            </li>
+          </ul>
+          </li>
+           <!-- ++++++++++++++++++++++++++++++++ -->
+     
+    </ol> 
+  <p><b>Aprender</b><br><br></p>
+</details></li>
     <!-- ****************************** -->
     <li><details class="select">
       <summary>10-11 Praeparatio</summary>
@@ -348,6 +438,306 @@
   </ol>
 </section>
 <!-- ////////////////////////////////// -->
+   <section>
+    <h2 class="subtitulo">Jueves</h2>
+   <!-- /////////////////////////////////////// -->
+   <ol>
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+  </ol>
+</section>
+<!-- ////////////////////////////////// -->
+   <section>
+    <h2 class="subtitulo">Viernes</h2>
+   <!-- /////////////////////////////////////// -->
+   <ol>
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+  </ol>
+</section>
+<!-- ////////////////////////////////// -->
+   <section>
+    <h2 class="subtitulo">Sábado</h2>
+   <!-- /////////////////////////////////////// -->
+   <ol>
+    <li><details class="select">
+      <summary>Proyectos</summary>
+  <ol>
+        <li>Parrilla</li>
+        <li>Pintura Negra</li>
+        <li>Pintura Blanca</li>
+        <li>Entrada de la casa</li>
+        <li>Barra para ejercicios</li>
+        <li>Pesas siguiente nivel</li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+  </ol>
+</section>
+<!-- ////////////////////////////////// -->
+   <section>
+    <h2 class="subtitulo">Domingo</h2>
+   <!-- /////////////////////////////////////// -->
+   <ol>
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary></summary>
+  <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+   
+  </ol>
+</section>
+<!-- ////////////////////////////////// -->
 <section id="5">
   <h2 class="cita">METANOIA</h2>
   <ol>
@@ -431,7 +821,10 @@
           <li>Se construye con el Bien, en todo y cada cosa. Venciendo al mal donde quiera se instale</li>
           <li> La autoridad divina de Jesús, su poder sobre el mal</li>
           <li>El servicio es el bien que hacemos, en nombre de Dios a nuestros semejantes</li>
-          <li>ESte servicio debe ser integral, físico, social, y principalmente espiritual </li>
+          <li>Este servicio debe ser integral, físico, social, y principalmente espiritual </li>
+          <li>El bien se inicia con la verdad y lleva a la libertad</li>
+          <li></li>
+          <li></li>
           <li></li>
         </ol>
       </b></p>
@@ -444,5 +837,8 @@
     <!-- ****************************** -->
   </ol>
 </section>
+<!-- //////////////////////////////////////////// -->
+<script src="../javascript/index.js"></script>
+<!-- //////////////////////////////////////////// -->
   </body>
 </html>
