--- a/BlockGkc.html
+++ b/BlockGkc.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de Tareas con Check</title>
+    <style>
+      
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        input[type="checkbox"] {
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
-  <h1>BLOCK</h1>
-  <h2>Mariología</h2>
-  <a href="https://www.youtube.com/watch?v=Py_whLuYvNU&list=PLnSi6p8dOgsJ36f9Q_KD0ECueWzO5rtEc">Carlos Rosell 8 temas</a>
-  <a href="https://www.youtube.com/watch?v=d7vva_Dx1Ec">Monseñor Munilla</a>
-<!-- /////////////////////////////////////////////////////// -->
-<h2 class="cita">Contacto Inicial</h2>
-<ol>
-  <li>frecuencias y ritmos</li>
-  <li>orden</li>
-  <li>medidas</li>
-  <li>objetivos</li>
+
+    <h2>Lista de Tareas</h2>
+    <ul id="taskList">
+        <li><input type="checkbox" data-id="ajedrez"> Ajedrez</li>
+        <li><input type="checkbox" data-id="apologia"> Apología</li>
+        <li><input type="checkbox" data-id="canto"> Canto</li>
+        <li><input type="checkbox" data-id="cocina"> Cocina</li>
+        <li><input type="checkbox" data-id="corpus"> Corpus</li>
+        <li><input type="checkbox" data-id="fisica"> Física</li>
+        <li><input type="checkbox" data-id="idioma"> Idioma</li>
+        <li><input type="checkbox" data-id="peliculas"> Películas</li>
+        <li><input type="checkbox" data-id="programacion"> Programación</li>
+        <li><input type="checkbox" data-id="musica"> Música</li>
  
-  <li></li>
-  <li></li>
- 
-</ol>
-<!-- //////////////////////////////////////////////////////////////// -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </ul>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const checkboxes = document.querySelectorAll("input[type='checkbox']");
+
+            // Cargar estado guardado de cada checkbox
+            checkboxes.forEach(checkbox => {
+                const id = checkbox.getAttribute("data-id");
+                const isChecked = localStorage.getItem(id) === "true";
+                checkbox.checked = isChecked;
+
+                // Guardar cambios en localStorage cuando se marque/desmarque
+                checkbox.addEventListener("change", function () {
+                    localStorage.setItem(id, this.checked);
+                });
+            });
+        });
+    </script>
 
 </body>
 </html>
-<!-- /////////////////////////////////////////////////////////////// -->
