--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -94,7 +94,7 @@
         <li> <span class="hora" class="hora">Ajedrez</span>
           <ul>
             <li><input type="checkbox" data-id="ajedrez">
-              <span>video1 y Apertura Italiana</span>
+              <span>video1 y Aperturas</span>
             </li>
           </ul></li>
            <!-- ++++++++++++++++++++++++++++++++ -->
